syntax = "proto3";
import "streaming.proto";
package brpc;

option go_package ="../brpc";

// https://github.com/apache/incubator-brpc/blob/master/src/brpc/policy/baidu_rpc_meta.proto
// https://github.com/apache/incubator-brpc/blob/master/docs/cn/baidu_std.md

message Meta {
   RequestMeta request = 1;
   ResponseMeta response = 2;
   int32 compress_type = 3;
   int64 correlation_id = 4;
   int32 attachment_size = 5;
   ChunkInfo chunk_info = 6;
   bytes authentication_data = 7;
   StreamSettings stream_settings = 8;
}

message RequestMeta {
   string service_name = 1;
   string method_name = 2;
   int64 log_id = 3;
   int64 trace_id = 4;
   int64 span_id = 5;
   int64 parent_span_id = 6;
   string request_id = 7; // correspond to x-request-id in http header
   int32 timeout_ms = 8;  // client's timeout setting for current call
}

message ResponseMeta {
   int32 error_code = 1;
   string error_text = 2;
}

message ChunkInfo {
   int64 stream_id = 1;
   int64 chunk_id = 2;
}